# contest

./: .gitignore  OMakefile
aoj/: 0005.cpp  0121.cpp  0189.cpp  2200.cpp  BuildInfo.om  Makefile  utpc2008k.cpp
atcoder/: Makefile  OMakefile  template.cpp
atcoder/abc/: BuildInfo.om
atcoder/abc/020/: c.cpp
atcoder/abc/042/: d.rs
atcoder/abc/045/: a.cpp  b.cpp
atcoder/abc/046/: a.cpp  b.cpp  c.cpp  d.cpp
atcoder/abc/049/: d.rs
atcoder/abc/051/: d.rs
atcoder/abc/054/: d.rs
atcoder/abc/055/: a.rs  b.rs  c.rs  d.rs
atcoder/abc/056/: a.rs  b.rs
atcoder/abc/057/: a.rs  b.rs  c.rs
atcoder/abc/058/: a.rs  b.rs
atcoder/abc/059/: a.rs  b.rs
atcoder/abc/060/: a.rs  b.rs  d.rs
atcoder/abc/061/: a.cpp  b.cpp  c.cpp  d.cpp
atcoder/abc/069/: d.rs
atcoder/abc/070/: d.rs
atcoder/abc/072/: d.rs
atcoder/abc/073/: d.cpp
atcoder/abc/075/: d.rs
atcoder/abc/076/: d.rs
atcoder/abc/079/: d.rs
atcoder/abc/080/: d.rs
atcoder/abc/084/: d.rs
atcoder/abc/085/: d.rs
atcoder/abc/086/: d.rs
atcoder/abc/088/: a.cpp  b.cpp  c.cpp  d.cpp
atcoder/abc/089/: d.rs
atcoder/abc/096/: d.rs
atcoder/abc/099/: d.rs
atcoder/abc/100/: d.rs
atcoder/abc/101/: a.cpp  b.cpp  c.cpp
atcoder/abc/103/: d.rs
atcoder/abc/104/: c.rs  d.rs
atcoder/abc/105/: d.rs
atcoder/abc/106/: d.rs
atcoder/abc/109/: a.rs  b.rs  c.rs  d.rs
atcoder/abc/110/: d.rs
atcoder/abc/112/: d.rs
atcoder/abc/113/: d.rs
atcoder/abc/114/: d.rs
atcoder/abc/115/: d.rs
atcoder/abc/116/: d.rs
atcoder/abc/117/: a.rs  b.rs  c.rs  d.cpp
atcoder/abc/118/: d.rs
atcoder/abc/119/: d.cpp
atcoder/abc/120/: c.rs  d.cpp
atcoder/abc/121/: c.rs  d.rs
atcoder/abc/122/: c.rs  d.rs
atcoder/abc/123/: c.rs  d.rs
atcoder/abc/124/: c.rs  d.rs
atcoder/abc/125/: c.rs  d.rs
atcoder/abc/126/: a.cpp  b.cpp  c.rs  d.cpp  e.cpp  f.cpp
atcoder/abc/127/: a.rs  b.rs  c.rs  d.rs  e.rs  f.cpp
atcoder/abc/128/: a.rs  b.rs  (+4 more)
atcoder/arc/: BuildInfo.om
atcoder/fes2016b/: b.cpp
atcoder/fes2016c/: a.cpp  b.cpp
atcoder/fes2016final/: a.cpp  b.cpp
atcoder/fes2016relay/: g.cpp
cargo/: compete.toml
cargo/abc149/: Cargo.toml
cargo/abc150/: Cargo.toml
cargo/abc154/: Cargo.toml
cargo/abc155/: Cargo.toml
cargo/abc156/: Cargo.toml
cargo/abc157/: Cargo.toml
cargo/abc158/: Cargo.toml
cargo/abc159/: Cargo.toml
cargo/abc160/: Cargo.toml
cargo/abc161/: Cargo.toml
cargo/abc162/: Cargo.toml
cargo/abc163/: Cargo.toml
cargo/abc164/: Cargo.toml
cargo/abc165/: Cargo.toml
cargo/abc166/: Cargo.toml
cargo/abc167/: Cargo.toml
cargo/abc168/: Cargo.toml
cargo/abc169/: Cargo.toml
cargo/abc170/: Cargo.toml
cargo/abc172/: Cargo.toml
cargo/abc173/: Cargo.toml
cargo/abc174/: Cargo.toml
cargo/abc175/: Cargo.toml
cargo/abc176/: Cargo.toml
cargo/abc177/: Cargo.toml
cargo/abc178/: Cargo.toml
cargo/abc179/: Cargo.toml
cargo/abc180/: Cargo.toml
cargo/abc181/: Cargo.toml
cargo/abc182/: Cargo.toml
cargo/abc183/: Cargo.toml
cargo/abc184/: Cargo.toml
cargo/abc185/: Cargo.toml
cargo/abc186/: Cargo.toml
cargo/abc187/: Cargo.toml
cargo/abc188/: Cargo.toml
cargo/abc189/: Cargo.toml
cargo/abc190/: Cargo.toml
cargo/abc191/: Cargo.toml
cargo/abc192/: Cargo.toml
cargo/abc193/: Cargo.toml
cargo/abc204/: Cargo.toml
cargo/abc211/: Cargo.toml
cargo/abc212/: Cargo.toml
cargo/abc213/: Cargo.toml
cargo/abc214/: Cargo.toml
cargo/abc215/: Cargo.toml
cargo/abc216/: Cargo.toml
cargo/abc217/: Cargo.toml
cargo/abc218/: Cargo.toml
cargo/abc219/: Cargo.toml
cargo/abc220/: Cargo.toml
cargo/abc221/: Cargo.toml
cargo/abc222/: Cargo.toml
cargo/abc223/: Cargo.toml
cargo/abc224/: Cargo.toml
cargo/abc225/: Cargo.toml
cargo/abc226/: Cargo.toml
cargo/abc227/: Cargo.toml
cargo/abc228/: Cargo.toml
cargo/abc229/: Cargo.toml
cargo/abc230/: Cargo.toml
cargo/abc231/: Cargo.toml
cargo/abc232/: Cargo.toml
cargo/abc233/: Cargo.toml
cargo/abc234/: Cargo.toml
cargo/abc235/: Cargo.toml
cargo/abc236/: Cargo.toml
cargo/abc237/: Cargo.toml
cargo/abc238/: Cargo.toml
cargo/abc239/: Cargo.toml
cargo/abc249/: Cargo.toml
cargo/abc287/: Cargo.toml
cargo/abc288/: Cargo.toml
cargo/abc289/: Cargo.toml
cargo/abc290/: Cargo.toml
cargo/abc291/: Cargo.toml
cargo/abc292/: Cargo.toml
cargo/abc293/: Cargo.toml
cargo/abc294/: Cargo.toml
cargo/abc295/: Cargo.toml
cargo/abc358/: Cargo.toml
cargo/arc112/: Cargo.toml
cargo/arc113/: Cargo.toml
cargo/codequeen2023-final-open/: Cargo.toml
cargo/hitachi2020/: Cargo.toml
cargo/judge-update-202004/: Cargo.toml
cargo/newjudge-2308-algorithm/: Cargo.toml
cargo/otemae2019/: Cargo.toml
cargo/panasonic2020/: Cargo.toml
cargo/past202010-open/: Cargo.toml
cargo/tokiomarine2020/: Cargo.toml
cargo/typical90/: Cargo.toml
cargo/typical90/testcases/: 077.yml
codechef/: chcinema.cpp  chdiger.rs  digitsep.rs  digitsep1.cpp  eartseq.cpp  fuzzylin.rs  gears.cpp  kcon.cpp  timeasr.cpp
gcj/: BuildInfo.om  OMakefile
gcj/2020-1a/: a.rs  b.rs
gcj/2020-2/: a-small.rs  a.rs  b-small.rs  c.rs
gcj/2020-3/: a.rs
gcj/2020qual/: a.rs  b.rs  c.rs  d.rs
gcj/gcj2021-1a/: Cargo.toml
gcj/gcj2021-1b/: Cargo.toml
gcj/gcj2021-2/: Cargo.toml
gcj/gcj2021qual/: Cargo.toml
gcj/gcj2022-1b/: Cargo.toml  local_testing_tool.py
gcj/gcj2022qual/: Cargo.toml
lib/: Dinic.cpp  FordFulkerson.rs  ModInt.rs  UnionFind.rs  UnionFindWithSize.rs  binary_search.rs  bit.cpp  bit.rs  bit2.cpp  dinic.rs  geometry.cpp  geometry.rs  lazysegtree.rs  lis.rs  modint.rs  segtree.cpp  segtree.rs  unionfind.cpp  weighted_union_find.rs
poj/: 1258.cpp  1328.cpp  1990.cpp  1995.cpp  2155.cpp  2236.cpp  2376.cpp  2991.cpp  3126.cpp  3264.cpp  3280.cpp  3614.cpp  3641.cpp  3713.cpp  BuildInfo.om  Makefile  OMakefile
snippet/: .gitignore  Cargo.toml
snippet/src/: bit.rs  fft.rs  lib.rs  lib_binary_search.rs  lib_bit.rs  lib_compress.rs  lib_fft.rs  lib_max_flow.rs  lib_modint.rs  lib_rerooting_dp.rs  lib_segtree.rs  lib_union_find.rs  max_flow.rs  modint.rs  segtree.rs
template/: template.cpp  template.rs
(+452 files in other folders)
