[dependencies]

[package]
authors = ['minus3theta <yone_j_synthesis@yahoo.co.jp>']
edition = '2018'
name = 'abc150'
version = '0.1.0'

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc150-a",problem = "https://atcoder.jp/contests/abc150/<FIXME: screen name of the problem>"}
b = {name = "abc150-b",problem = "https://atcoder.jp/contests/abc150/<FIXME: screen name of the problem>"}
d = {name = "abc150-d",problem = "https://atcoder.jp/contests/abc150/<FIXME: screen name of the problem>"}
e = {name = "abc150-e",problem = "https://atcoder.jp/contests/abc150/<FIXME: screen name of the problem>"}
[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc150-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc150-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc150-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc150-e"
path = "./src/bin/e.rs"
