[dependencies]

[package]
authors = ['minus3theta <yone_j_synthesis@yahoo.co.jp>']
edition = '2018'
name = 'abc154'
version = '0.1.0'

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc154-a",problem = "https://atcoder.jp/contests/abc154/<FIXME: screen name of the problem>"}
b = {name = "abc154-b",problem = "https://atcoder.jp/contests/abc154/<FIXME: screen name of the problem>"}
c = {name = "abc154-c",problem = "https://atcoder.jp/contests/abc154/<FIXME: screen name of the problem>"}
d = {name = "abc154-d",problem = "https://atcoder.jp/contests/abc154/<FIXME: screen name of the problem>"}
e = {name = "abc154-e",problem = "https://atcoder.jp/contests/abc154/<FIXME: screen name of the problem>"}
f = {name = "abc154-f",problem = "https://atcoder.jp/contests/abc154/<FIXME: screen name of the problem>"}
[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc154-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc154-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc154-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc154-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc154-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc154-f"
path = "./src/bin/f.rs"
