[dependencies]

[package]
authors = ['minus3theta <yone_j_synthesis@yahoo.co.jp>']
edition = '2018'
name = 'abc155'
version = '0.1.0'

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc155-a",problem = "https://atcoder.jp/contests/abc155/<FIXME: screen name of the problem>"}
b = {name = "abc155-b",problem = "https://atcoder.jp/contests/abc155/<FIXME: screen name of the problem>"}
c = {name = "abc155-c",problem = "https://atcoder.jp/contests/abc155/<FIXME: screen name of the problem>"}
d = {name = "abc155-d",problem = "https://atcoder.jp/contests/abc155/<FIXME: screen name of the problem>"}
e = {name = "abc155-e",problem = "https://atcoder.jp/contests/abc155/<FIXME: screen name of the problem>"}
[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc155-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc155-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc155-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc155-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc155-e"
path = "./src/bin/e.rs"
