[dependencies]

[package]
authors = ['minus3theta <yone_j_synthesis@yahoo.co.jp>']
edition = '2018'
name = 'abc156'
version = '0.1.0'

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc156-a",problem = "https://atcoder.jp/contests/abc156/<FIXME: screen name of the problem>"}
b = {name = "abc156-b",problem = "https://atcoder.jp/contests/abc156/<FIXME: screen name of the problem>"}
c = {name = "abc156-c",problem = "https://atcoder.jp/contests/abc156/<FIXME: screen name of the problem>"}
d = {name = "abc156-d",problem = "https://atcoder.jp/contests/abc156/<FIXME: screen name of the problem>"}
e = {name = "abc156-e",problem = "https://atcoder.jp/contests/abc156/<FIXME: screen name of the problem>"}
[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc156-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc156-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc156-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc156-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc156-e"
path = "./src/bin/e.rs"
