[package]
name = "abc159"
version = "0.1.0"
authors = ["minus3theta <yone_j_synthesis@yahoo.co.jp>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc159-a",problem = "https://atcoder.jp/contests/abc159/<FIXME: screen name of the problem>"}
b = {name = "abc159-b",problem = "https://atcoder.jp/contests/abc159/<FIXME: screen name of the problem>"}
c = {name = "abc159-c",problem = "https://atcoder.jp/contests/abc159/<FIXME: screen name of the problem>"}
d = {name = "abc159-d",problem = "https://atcoder.jp/contests/abc159/<FIXME: screen name of the problem>"}
e = {name = "abc159-e",problem = "https://atcoder.jp/contests/abc159/<FIXME: screen name of the problem>"}
f = {name = "abc159-f",problem = "https://atcoder.jp/contests/abc159/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc159-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc159-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc159-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc159-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc159-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc159-f"
path = "./src/bin/f.rs"
