[package]
name = "abc160"
version = "0.1.0"
authors = ["minus3theta <yone_j_synthesis@yahoo.co.jp>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "abc160-a",problem = "https://atcoder.jp/contests/abc160/<FIXME: screen name of the problem>"}
b = {name = "abc160-b",problem = "https://atcoder.jp/contests/abc160/<FIXME: screen name of the problem>"}
c = {name = "abc160-c",problem = "https://atcoder.jp/contests/abc160/<FIXME: screen name of the problem>"}
d = {name = "abc160-d",problem = "https://atcoder.jp/contests/abc160/<FIXME: screen name of the problem>"}
e = {name = "abc160-e",problem = "https://atcoder.jp/contests/abc160/<FIXME: screen name of the problem>"}
f = {name = "abc160-f",problem = "https://atcoder.jp/contests/abc160/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "abc160-a"
path = "./src/bin/a.rs"

[[bin]]
name = "abc160-b"
path = "./src/bin/b.rs"

[[bin]]
name = "abc160-c"
path = "./src/bin/c.rs"

[[bin]]
name = "abc160-d"
path = "./src/bin/d.rs"

[[bin]]
name = "abc160-e"
path = "./src/bin/e.rs"

[[bin]]
name = "abc160-f"
path = "./src/bin/f.rs"
