[package]
name = "hitachi2020"
version = "0.1.0"
authors = ["minus3theta <yone_j_synthesis@yahoo.co.jp>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "hitachi2020-a",problem = "https://atcoder.jp/contests/hitachi2020/<FIXME: screen name of the problem>"}
b = {name = "hitachi2020-b",problem = "https://atcoder.jp/contests/hitachi2020/<FIXME: screen name of the problem>"}
c = {name = "hitachi2020-c",problem = "https://atcoder.jp/contests/hitachi2020/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "hitachi2020-a"
path = "./src/bin/a.rs"

[[bin]]
name = "hitachi2020-b"
path = "./src/bin/b.rs"

[[bin]]
name = "hitachi2020-c"
path = "./src/bin/c.rs"
