[package]
name = "newjudge-2308-algorithm"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
newjudge-2308-algorithm-a = { alias = "a", problem = "https://atcoder.jp/contests/newjudge-2308-algorithm/tasks/abc264_a" }
newjudge-2308-algorithm-b = { alias = "b", problem = "https://atcoder.jp/contests/newjudge-2308-algorithm/tasks/abc273_b" }
newjudge-2308-algorithm-c = { alias = "c", problem = "https://atcoder.jp/contests/newjudge-2308-algorithm/tasks/abc244_c" }
newjudge-2308-algorithm-d = { alias = "d", problem = "https://atcoder.jp/contests/newjudge-2308-algorithm/tasks/abc309_d" }
newjudge-2308-algorithm-e = { alias = "e", problem = "https://atcoder.jp/contests/newjudge-2308-algorithm/tasks/abc304_e" }
newjudge-2308-algorithm-f = { alias = "f", problem = "https://atcoder.jp/contests/newjudge-2308-algorithm/tasks/abc260_f" }
newjudge-2308-algorithm-g = { alias = "g", problem = "https://atcoder.jp/contests/newjudge-2308-algorithm/tasks/abc254_g" }
newjudge-2308-algorithm-h = { alias = "h", problem = "https://atcoder.jp/contests/newjudge-2308-algorithm/tasks/abc294_h" }

[[bin]]
name = "newjudge-2308-algorithm-a"
path = "src/bin/a.rs"

[[bin]]
name = "newjudge-2308-algorithm-b"
path = "src/bin/b.rs"

[[bin]]
name = "newjudge-2308-algorithm-c"
path = "src/bin/c.rs"

[[bin]]
name = "newjudge-2308-algorithm-d"
path = "src/bin/d.rs"

[[bin]]
name = "newjudge-2308-algorithm-e"
path = "src/bin/e.rs"

[[bin]]
name = "newjudge-2308-algorithm-f"
path = "src/bin/f.rs"

[[bin]]
name = "newjudge-2308-algorithm-g"
path = "src/bin/g.rs"

[[bin]]
name = "newjudge-2308-algorithm-h"
path = "src/bin/h.rs"

[dependencies]
num = "=0.2.1"
num-bigint = "=0.2.5"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.3"
num-traits = "=0.2.11"
num-derive = "=0.3.0"
ndarray = "=0.13.0"
nalgebra = "=0.19.0"
alga = "=0.9.2"
libm = "=0.2.1"
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.1"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
rand_distr = "=0.2.2"
petgraph = "=0.5.0"
indexmap = "=1.3.0"
regex = "=1.3.3"
lazy_static = "=1.4.0"
ordered-float = "=1.0.2"
ascii = "=1.0.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.8.2"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.5.3"
im-rc = "=14.1.0"
fixedbitset = "=0.2.0"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.3.4", features = ["derive"] }
text_io = "=0.1.7"
whiteread = "=0.5.0"
rustc-hash = "=1.0.1"
smallvec = "=1.1.0"

[dev-dependencies]
