[package]
name = "panasonic2020"
version = "0.1.0"
authors = ["minus3theta <yone_j_synthesis@yahoo.co.jp>"]
edition = "2018"

[package.metadata.cargo-compete]
config = "../compete.toml"

[package.metadata.cargo-compete.bin]
a = {name = "panasonic2020-a",problem = "https://atcoder.jp/contests/panasonic2020/<FIXME: screen name of the problem>"}
b = {name = "panasonic2020-b",problem = "https://atcoder.jp/contests/panasonic2020/<FIXME: screen name of the problem>"}
c = {name = "panasonic2020-c",problem = "https://atcoder.jp/contests/panasonic2020/<FIXME: screen name of the problem>"}
d = {name = "panasonic2020-d",problem = "https://atcoder.jp/contests/panasonic2020/<FIXME: screen name of the problem>"}
e = {name = "panasonic2020-e",problem = "https://atcoder.jp/contests/panasonic2020/<FIXME: screen name of the problem>"}
f = {name = "panasonic2020-f",problem = "https://atcoder.jp/contests/panasonic2020/<FIXME: screen name of the problem>"}
"f copy" = {name = "panasonic2020-f copy",problem = "https://atcoder.jp/contests/panasonic2020/<FIXME: screen name of the problem>"}

# dependencies added to new project
[dependencies]

[profile.release]
lto = true
panic = 'abort'

[[bin]]
name = "panasonic2020-a"
path = "./src/bin/a.rs"

[[bin]]
name = "panasonic2020-b"
path = "./src/bin/b.rs"

[[bin]]
name = "panasonic2020-c"
path = "./src/bin/c.rs"

[[bin]]
name = "panasonic2020-d"
path = "./src/bin/d.rs"

[[bin]]
name = "panasonic2020-e"
path = "./src/bin/e.rs"

[[bin]]
name = "panasonic2020-f"
path = "./src/bin/f.rs"

[[bin]]
name = "panasonic2020-f copy"
path = "./src/bin/f copy.rs"
